--- a/OtoServis/Rapor/ReportHerBirParcaninOrtalamaSatisFiyati.rdlc
+++ b/OtoServis/Rapor/ReportHerBirParcaninOrtalamaSatisFiyati.rdlc
@@ -6,13 +6,10 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>4.78424cm</Width>
+              <Width>5.63531cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>4.78424cm</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>4.78424cm</Width>
+              <Width>5.63531cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -28,7 +25,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Marka Adi</Value>
+                              <Value>Parca Adi</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -58,7 +55,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Arac Sayisi</Value>
+                              <Value>Ortalama Satis Fiyati</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -79,36 +76,6 @@
                     </Textbox>
                   </CellContents>
                 </TablixCell>
-                <TablixCell>
-                  <CellContents>
-                    <Textbox Name="Textbox5">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>Ortalama Yaş</Value>
-                              <Style />
-                            </TextRun>
-                          </TextRuns>
-                          <Style />
-                        </Paragraph>
-                      </Paragraphs>
-                      <rd:DefaultName>Textbox5</rd:DefaultName>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
-                        </Border>
-                        <PaddingLeft>2pt</PaddingLeft>
-                        <PaddingRight>2pt</PaddingRight>
-                        <PaddingTop>2pt</PaddingTop>
-                        <PaddingBottom>2pt</PaddingBottom>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
               </TablixCells>
             </TablixRow>
             <TablixRow>
@@ -116,21 +83,21 @@
               <TablixCells>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="MarkaAdi">
+                    <Textbox Name="ParcaAdi">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!MarkaAdi.Value</Value>
+                              <Value>=Fields!ParcaAdi.Value</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
                           <Style />
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>MarkaAdi</rd:DefaultName>
+                      <rd:DefaultName>ParcaAdi</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -146,51 +113,21 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="AracSayisi">
+                    <Textbox Name="OrtalamaSatisFiyati">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!AracSayisi.Value</Value>
+                              <Value>=Fields!OrtalamaSatisFiyati.Value</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
                           <Style />
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>AracSayisi</rd:DefaultName>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
-                        </Border>
-                        <PaddingLeft>2pt</PaddingLeft>
-                        <PaddingRight>2pt</PaddingRight>
-                        <PaddingTop>2pt</PaddingTop>
-                        <PaddingBottom>2pt</PaddingBottom>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
-                <TablixCell>
-                  <CellContents>
-                    <Textbox Name="OrtalamaYas">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>=Fields!OrtalamaYas.Value</Value>
-                              <Style />
-                            </TextRun>
-                          </TextRuns>
-                          <Style />
-                        </Paragraph>
-                      </Paragraphs>
-                      <rd:DefaultName>OrtalamaYas</rd:DefaultName>
+                      <rd:DefaultName>OrtalamaSatisFiyati</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -212,7 +149,6 @@
           <TablixMembers>
             <TablixMember />
             <TablixMember />
-            <TablixMember />
           </TablixMembers>
         </TablixColumnHierarchy>
         <TablixRowHierarchy>
@@ -225,11 +161,11 @@
             </TablixMember>
           </TablixMembers>
         </TablixRowHierarchy>
-        <DataSetName>DataSetRaporHerBirMarkayaAitAracSayisiVeOrtalamaYaslari</DataSetName>
-        <Top>2.27224cm</Top>
-        <Left>0.89641cm</Left>
+        <DataSetName>DataSetRaporHerBirParcaninOrtalamaSatisFiyati</DataSetName>
+        <Top>1.63724cm</Top>
+        <Left>2.56328cm</Left>
         <Height>1.2cm</Height>
-        <Width>14.35271cm</Width>
+        <Width>11.27062cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -258,39 +194,35 @@
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>6388bb2b-cd16-48b3-a2b1-273f0e6d498e</rd:DataSourceID>
+      <rd:DataSourceID>8a45e1ec-d3e1-4659-a90d-2fea57507067</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
-    <DataSet Name="DataSetRaporHerBirMarkayaAitAracSayisiVeOrtalamaYaslari">
+    <DataSet Name="DataSetRaporHerBirParcaninOrtalamaSatisFiyati">
       <Query>
         <DataSourceName>OtoServisDataSet</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
-        <Field Name="MarkaAdi">
-          <DataField>MarkaAdi</DataField>
+        <Field Name="ParcaAdi">
+          <DataField>ParcaAdi</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="AracSayisi">
-          <DataField>AracSayisi</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
-        </Field>
-        <Field Name="OrtalamaYas">
-          <DataField>OrtalamaYas</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
+        <Field Name="OrtalamaSatisFiyati">
+          <DataField>OrtalamaSatisFiyati</DataField>
+          <rd:TypeName>System.Decimal</rd:TypeName>
         </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>OtoServisDataSet</rd:DataSetName>
         <rd:SchemaPath>C:\Users\Admin\source\repos\OtoServis\OtoServis\OtoServisDataSet.xsd</rd:SchemaPath>
-        <rd:TableName>SpHerBirMarkayaAitAracSayisiVeOrtalamaYaslari</rd:TableName>
+        <rd:TableName>SpHerBirParcaninOrtalamaSatisFiyati</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
-        <rd:TableAdapterName>SpHerBirMarkayaAitAracSayisiVeOrtalamaYaslariTableAdapter</rd:TableAdapterName>
+        <rd:TableAdapterName>SpHerBirParcaninOrtalamaSatisFiyatiTableAdapter</rd:TableAdapterName>
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
   <rd:ReportUnitType>Cm</rd:ReportUnitType>
-  <rd:ReportID>288db210-10b4-4e0b-8784-6bc148714778</rd:ReportID>
+  <rd:ReportID>d6636d70-78d3-4f66-8daa-db44bb81c413</rd:ReportID>
 </Report>
