--- a/OtoServis/Rapor/ReportHerBirPersonelIcinYapilanToplamSatisTutariVeSatisAdedi.rdlc
+++ b/OtoServis/Rapor/ReportHerBirPersonelIcinYapilanToplamSatisTutariVeSatisAdedi.rdlc
@@ -6,13 +6,16 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>4.78424cm</Width>
+              <Width>4.26609cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>4.78424cm</Width>
+              <Width>4.26609cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>4.78424cm</Width>
+              <Width>4.26609cm</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>4.26609cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -28,7 +31,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Marka Adi</Value>
+                              <Value>Email</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -58,7 +61,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Arac Sayisi</Value>
+                              <Value>Satis Personeli</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -88,7 +91,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Ortalama Yaş</Value>
+                              <Value>Toplam Satis Tutari</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -109,6 +112,36 @@
                     </Textbox>
                   </CellContents>
                 </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox7">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>Satis Adedi</Value>
+                              <Style />
+                            </TextRun>
+                          </TextRuns>
+                          <Style />
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox7</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                        </Border>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
               </TablixCells>
             </TablixRow>
             <TablixRow>
@@ -116,21 +149,21 @@
               <TablixCells>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="MarkaAdi">
+                    <Textbox Name="Email">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!MarkaAdi.Value</Value>
+                              <Value>=Fields!Email.Value</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
                           <Style />
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>MarkaAdi</rd:DefaultName>
+                      <rd:DefaultName>Email</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -146,21 +179,21 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="AracSayisi">
+                    <Textbox Name="SatisPersoneli">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!AracSayisi.Value</Value>
+                              <Value>=Fields!SatisPersoneli.Value</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
                           <Style />
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>AracSayisi</rd:DefaultName>
+                      <rd:DefaultName>SatisPersoneli</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -176,21 +209,51 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="OrtalamaYas">
+                    <Textbox Name="ToplamSatisTutari">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!OrtalamaYas.Value</Value>
+                              <Value>=Fields!ToplamSatisTutari.Value</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
                           <Style />
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>OrtalamaYas</rd:DefaultName>
+                      <rd:DefaultName>ToplamSatisTutari</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                        </Border>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="SatisAdedi">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>=Fields!SatisAdedi.Value</Value>
+                              <Style />
+                            </TextRun>
+                          </TextRuns>
+                          <Style />
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>SatisAdedi</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -213,6 +276,7 @@
             <TablixMember />
             <TablixMember />
             <TablixMember />
+            <TablixMember />
           </TablixMembers>
         </TablixColumnHierarchy>
         <TablixRowHierarchy>
@@ -225,11 +289,11 @@
             </TablixMember>
           </TablixMembers>
         </TablixRowHierarchy>
-        <DataSetName>DataSetRaporHerBirMarkayaAitAracSayisiVeOrtalamaYaslari</DataSetName>
-        <Top>2.27224cm</Top>
-        <Left>0.89641cm</Left>
+        <DataSetName>DataSetRaporHerBirPersonelIcinYapilanToplamSatisTutariVeSatisAdedi</DataSetName>
+        <Top>2.00766cm</Top>
+        <Left>1.18745cm</Left>
         <Height>1.2cm</Height>
-        <Width>14.35271cm</Width>
+        <Width>17.06437cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -240,7 +304,7 @@
     <Height>2in</Height>
     <Style />
   </Body>
-  <Width>6.5in</Width>
+  <Width>8.07292in</Width>
   <Page>
     <PageHeight>29.7cm</PageHeight>
     <PageWidth>21cm</PageWidth>
@@ -258,39 +322,43 @@
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>6388bb2b-cd16-48b3-a2b1-273f0e6d498e</rd:DataSourceID>
+      <rd:DataSourceID>ae68d501-9bdc-4870-af09-14a841d1081d</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
-    <DataSet Name="DataSetRaporHerBirMarkayaAitAracSayisiVeOrtalamaYaslari">
+    <DataSet Name="DataSetRaporHerBirPersonelIcinYapilanToplamSatisTutariVeSatisAdedi">
       <Query>
         <DataSourceName>OtoServisDataSet</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
-        <Field Name="MarkaAdi">
-          <DataField>MarkaAdi</DataField>
+        <Field Name="Email">
+          <DataField>Email</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="AracSayisi">
-          <DataField>AracSayisi</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
+        <Field Name="SatisPersoneli">
+          <DataField>SatisPersoneli</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="OrtalamaYas">
-          <DataField>OrtalamaYas</DataField>
+        <Field Name="ToplamSatisTutari">
+          <DataField>ToplamSatisTutari</DataField>
+          <rd:TypeName>System.Decimal</rd:TypeName>
+        </Field>
+        <Field Name="SatisAdedi">
+          <DataField>SatisAdedi</DataField>
           <rd:TypeName>System.Int32</rd:TypeName>
         </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>OtoServisDataSet</rd:DataSetName>
         <rd:SchemaPath>C:\Users\Admin\source\repos\OtoServis\OtoServis\OtoServisDataSet.xsd</rd:SchemaPath>
-        <rd:TableName>SpHerBirMarkayaAitAracSayisiVeOrtalamaYaslari</rd:TableName>
+        <rd:TableName>SpHerBirPersonelIcinYapilanToplamSatisTutariVeSatisAdedi</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
-        <rd:TableAdapterName>SpHerBirMarkayaAitAracSayisiVeOrtalamaYaslariTableAdapter</rd:TableAdapterName>
+        <rd:TableAdapterName>SpHerBirPersonelIcinYapilanToplamSatisTutariVeSatisAdediTableAdapter</rd:TableAdapterName>
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
   <rd:ReportUnitType>Cm</rd:ReportUnitType>
-  <rd:ReportID>288db210-10b4-4e0b-8784-6bc148714778</rd:ReportID>
+  <rd:ReportID>7c95960e-e067-4644-b3ac-32b9231accac</rd:ReportID>
 </Report>
