--- a/OtoServis/Rapor/ReportBirYildaYapilanToplamSatisMiktari.rdlc
+++ b/OtoServis/Rapor/ReportBirYildaYapilanToplamSatisMiktari.rdlc
@@ -165,7 +165,7 @@
         <Top>1.90182cm</Top>
         <Left>3.46287cm</Left>
         <Height>1.2cm</Height>
-        <Width>8.30729cm</Width>
+        <Width>8.3073cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -189,18 +189,18 @@
   </Page>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
-    <DataSource Name="OtoServisDataSet">
+    <DataSource Name="OtoServisDataSet1">
       <ConnectionProperties>
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>4517836d-97be-479b-ab11-da6a646fee41</rd:DataSourceID>
+      <rd:DataSourceID>c99f22c0-b2c4-49b0-9cee-c016ec8f83ea</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="DataSetReportBirYildaYapilanToplamSatisMiktari">
       <Query>
-        <DataSourceName>OtoServisDataSet</DataSourceName>
+        <DataSourceName>OtoServisDataSet1</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
@@ -214,8 +214,8 @@
         </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>OtoServisDataSet</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\Admin\source\repos\OtoServis\OtoServis\OtoServisDataSet.xsd</rd:SchemaPath>
+        <rd:DataSetName>OtoServisDataSet1</rd:DataSetName>
+        <rd:SchemaPath>C:\Users\Serhat Deniz\Source\Repos\OtoServisLast\OtoServis\OtoServisDataSet1.xsd</rd:SchemaPath>
         <rd:TableName>SpBirYildaYapilanToplamSatisMiktari</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
