--- a/OtoServis/Rapor/ReportEncokTamirEdilenAraclarListesi.rdlc
+++ b/OtoServis/Rapor/ReportEncokTamirEdilenAraclarListesi.rdlc
@@ -165,7 +165,7 @@
         <Top>1.79599cm</Top>
         <Left>0.76412cm</Left>
         <Height>1.2cm</Height>
-        <Width>15.24819cm</Width>
+        <Width>15.2482cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -189,18 +189,18 @@
   </Page>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
-    <DataSource Name="OtoServisDataSet">
+    <DataSource Name="OtoServisDataSet1">
       <ConnectionProperties>
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>096bb029-f25c-4ddd-bf9f-88f87b85c952</rd:DataSourceID>
+      <rd:DataSourceID>cf971c7e-315d-4a14-b1e1-2b25a5ef1b78</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="DataSetRaporEnCokTamirEdilenAraclarListesi">
       <Query>
-        <DataSourceName>OtoServisDataSet</DataSourceName>
+        <DataSourceName>OtoServisDataSet1</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
@@ -214,8 +214,8 @@
         </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>OtoServisDataSet</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\Admin\source\repos\OtoServis\OtoServis\OtoServisDataSet.xsd</rd:SchemaPath>
+        <rd:DataSetName>OtoServisDataSet1</rd:DataSetName>
+        <rd:SchemaPath>C:\Users\Serhat Deniz\Source\Repos\OtoServisLast\OtoServis\OtoServisDataSet1.xsd</rd:SchemaPath>
         <rd:TableName>SpEncokTamirEdilenAraclarListesi</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
