--- a/OtoServis/Rapor/ReportHerBirMarkayaAitAracSayisiVeOrtalamaYaslari.rdlc
+++ b/OtoServis/Rapor/ReportHerBirMarkayaAitAracSayisiVeOrtalamaYaslari.rdlc
@@ -229,7 +229,7 @@
         <Top>2.27224cm</Top>
         <Left>0.89641cm</Left>
         <Height>1.2cm</Height>
-        <Width>14.35271cm</Width>
+        <Width>14.35272cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -253,18 +253,18 @@
   </Page>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
-    <DataSource Name="OtoServisDataSet">
+    <DataSource Name="OtoServisDataSet1">
       <ConnectionProperties>
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>6388bb2b-cd16-48b3-a2b1-273f0e6d498e</rd:DataSourceID>
+      <rd:DataSourceID>25d1e357-b364-4dab-a2e4-1852335aad93</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="DataSetRaporHerBirMarkayaAitAracSayisiVeOrtalamaYaslari">
       <Query>
-        <DataSourceName>OtoServisDataSet</DataSourceName>
+        <DataSourceName>OtoServisDataSet1</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
@@ -282,8 +282,8 @@
         </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>OtoServisDataSet</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\Admin\source\repos\OtoServis\OtoServis\OtoServisDataSet.xsd</rd:SchemaPath>
+        <rd:DataSetName>OtoServisDataSet1</rd:DataSetName>
+        <rd:SchemaPath>C:\Users\Serhat Deniz\Source\Repos\OtoServisLast\OtoServis\OtoServisDataSet1.xsd</rd:SchemaPath>
         <rd:TableName>SpHerBirMarkayaAitAracSayisiVeOrtalamaYaslari</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
