--- a/OtoServis/Rapor/ReportHerBirPersonelIcinYapilanToplamSatisTutariVeSatisAdedi.rdlc
+++ b/OtoServis/Rapor/ReportHerBirPersonelIcinYapilanToplamSatisTutariVeSatisAdedi.rdlc
@@ -293,7 +293,7 @@
         <Top>2.00766cm</Top>
         <Left>1.18745cm</Left>
         <Height>1.2cm</Height>
-        <Width>17.06437cm</Width>
+        <Width>17.06436cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -317,18 +317,18 @@
   </Page>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
-    <DataSource Name="OtoServisDataSet">
+    <DataSource Name="OtoServisDataSet1">
       <ConnectionProperties>
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>ae68d501-9bdc-4870-af09-14a841d1081d</rd:DataSourceID>
+      <rd:DataSourceID>d1f23d4f-71fc-4dd8-8809-f56bfa92023a</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="DataSetRaporHerBirPersonelIcinYapilanToplamSatisTutariVeSatisAdedi">
       <Query>
-        <DataSourceName>OtoServisDataSet</DataSourceName>
+        <DataSourceName>OtoServisDataSet1</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
@@ -350,8 +350,8 @@
         </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>OtoServisDataSet</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\Admin\source\repos\OtoServis\OtoServis\OtoServisDataSet.xsd</rd:SchemaPath>
+        <rd:DataSetName>OtoServisDataSet1</rd:DataSetName>
+        <rd:SchemaPath>C:\Users\Serhat Deniz\Source\Repos\OtoServisLast\OtoServis\OtoServisDataSet1.xsd</rd:SchemaPath>
         <rd:TableName>SpHerBirPersonelIcinYapilanToplamSatisTutariVeSatisAdedi</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
