--- a/OtoServis/Rapor/ReportMusterilereGoreToplamHarcamaMiktari.rdlc
+++ b/OtoServis/Rapor/ReportMusterilereGoreToplamHarcamaMiktari.rdlc
@@ -229,7 +229,7 @@
         <Top>2.03412cm</Top>
         <Left>0.55245cm</Left>
         <Height>1.2cm</Height>
-        <Width>15.22583cm</Width>
+        <Width>15.22584cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -253,18 +253,18 @@
   </Page>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
-    <DataSource Name="OtoServisDataSet">
+    <DataSource Name="OtoServisDataSet1">
       <ConnectionProperties>
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>994a1e8d-e097-47f0-a117-de8da5eb6e93</rd:DataSourceID>
+      <rd:DataSourceID>08a04b67-6c8d-4ce0-9a3c-1c04cad805a6</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="DataSetRaporMusterilereGoreToplamHarcamaMiktari">
       <Query>
-        <DataSourceName>OtoServisDataSet</DataSourceName>
+        <DataSourceName>OtoServisDataSet1</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
@@ -282,8 +282,8 @@
         </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>OtoServisDataSet</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\Admin\source\repos\OtoServis\OtoServis\OtoServisDataSet.xsd</rd:SchemaPath>
+        <rd:DataSetName>OtoServisDataSet1</rd:DataSetName>
+        <rd:SchemaPath>C:\Users\Serhat Deniz\Source\Repos\OtoServisLast\OtoServis\OtoServisDataSet1.xsd</rd:SchemaPath>
         <rd:TableName>SpMusterilereGoreToplamHarcamaMiktari</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
