--- a/OtoServis/Rapor/ReportMusterilerinEnSonSatinAldiklariParcalar.rdlc
+++ b/OtoServis/Rapor/ReportMusterilerinEnSonSatinAldiklariParcalar.rdlc
@@ -293,7 +293,7 @@
         <Top>1.76953cm</Top>
         <Left>2.03412cm</Left>
         <Height>1.2cm</Height>
-        <Width>17.35542cm</Width>
+        <Width>17.3554cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -317,18 +317,18 @@
   </Page>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
-    <DataSource Name="OtoServisDataSet">
+    <DataSource Name="OtoServisDataSet1">
       <ConnectionProperties>
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>912b5c80-d45d-4a76-9727-93dc20d10bce</rd:DataSourceID>
+      <rd:DataSourceID>cf6c81ab-eb54-4102-af3c-ac9093b53409</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="DataSetRaporMusterilerinEnSonSatinAldiklariParcalar">
       <Query>
-        <DataSourceName>OtoServisDataSet</DataSourceName>
+        <DataSourceName>OtoServisDataSet1</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
@@ -350,8 +350,8 @@
         </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>OtoServisDataSet</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\Admin\source\repos\OtoServis\OtoServis\OtoServisDataSet.xsd</rd:SchemaPath>
+        <rd:DataSetName>OtoServisDataSet1</rd:DataSetName>
+        <rd:SchemaPath>C:\Users\Serhat Deniz\Source\Repos\OtoServisLast\OtoServis\OtoServisDataSet1.xsd</rd:SchemaPath>
         <rd:TableName>SpMusterilerinEnSonSatinAldiklariParcalar</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
