--- a/OtoServis/Rapor/ReportMusterininTamirIcinHarcadigiToplamTutar.rdlc
+++ b/OtoServis/Rapor/ReportMusterininTamirIcinHarcadigiToplamTutar.rdlc
@@ -229,7 +229,7 @@
         <Top>2.13995cm</Top>
         <Left>2.11349cm</Left>
         <Height>1.2cm</Height>
-        <Width>17.36896cm</Width>
+        <Width>17.36895cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -253,18 +253,18 @@
   </Page>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
-    <DataSource Name="OtoServisDataSet">
+    <DataSource Name="OtoServisDataSet1">
       <ConnectionProperties>
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>9392ba87-5c93-4e68-bd81-3efbb783cf89</rd:DataSourceID>
+      <rd:DataSourceID>12a70fb0-22a4-48c5-9c5e-d3f2e17bb2dd</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="DataSetRaporMusterininTamirIcinHarcadigiToplamTutar">
       <Query>
-        <DataSourceName>OtoServisDataSet</DataSourceName>
+        <DataSourceName>OtoServisDataSet1</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
@@ -282,8 +282,8 @@
         </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>OtoServisDataSet</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\Admin\source\repos\OtoServis\OtoServis\OtoServisDataSet.xsd</rd:SchemaPath>
+        <rd:DataSetName>OtoServisDataSet1</rd:DataSetName>
+        <rd:SchemaPath>C:\Users\Serhat Deniz\Source\Repos\OtoServisLast\OtoServis\OtoServisDataSet1.xsd</rd:SchemaPath>
         <rd:TableName>SpMusterininTamirIcinHarcadigiToplamTutar</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
