--- a/OtoServis/Rapor/ReportTamirIslemiGorenAracBilgileri.rdlc
+++ b/OtoServis/Rapor/ReportTamirIslemiGorenAracBilgileri.rdlc
@@ -421,7 +421,7 @@
         <Top>1.61078cm</Top>
         <Left>0.55245cm</Left>
         <Height>1.2cm</Height>
-        <Width>23.17562cm</Width>
+        <Width>23.1756cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -445,18 +445,18 @@
   </Page>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
-    <DataSource Name="OtoServisDataSet">
+    <DataSource Name="OtoServisDataSet1">
       <ConnectionProperties>
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>ea42931e-25a6-40ae-94d0-76850111dca3</rd:DataSourceID>
+      <rd:DataSourceID>d250f159-d77e-43b1-b23f-9ddbc7f6fc53</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="DataSetRaporTamirIslemiGorenAracBilgileri">
       <Query>
-        <DataSourceName>OtoServisDataSet</DataSourceName>
+        <DataSourceName>OtoServisDataSet1</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
@@ -486,8 +486,8 @@
         </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>OtoServisDataSet</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\Admin\source\repos\OtoServis\OtoServis\OtoServisDataSet.xsd</rd:SchemaPath>
+        <rd:DataSetName>OtoServisDataSet1</rd:DataSetName>
+        <rd:SchemaPath>C:\Users\Serhat Deniz\Source\Repos\OtoServisLast\OtoServis\OtoServisDataSet1.xsd</rd:SchemaPath>
         <rd:TableName>SpTamirIslemiGorenAracBilgileri</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
